# logging-color-formatter

./: .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
logging_color_formatter/: __init__.py
tests/: test_formatter.py
