[project]
dynamic = ["version"]
name = "logging-color-formatter"
description = "A colored logging formatter"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
keywords = ["logging"]
authors = [
  {name = "Mathieu Leplatre", email = "mathieu@leplat.re"},
]
dependencies = [
    "colorama",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Repository = "https://github.com/leplatrem/logging-color-formatter"

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
